--- a/css/grupo4n2.css
+++ b/css/grupo4n2.css
@@ -11,8 +11,7 @@ body {
 
 button{
 	width: 48px;
-	height: 48px;
-	background-image: url("http://");		
+	height: 48px;	
 	background-repeat: no-repeat;
 	background-size: 48px;	
 	float:right;	
@@ -55,21 +54,10 @@ h3 {
 	color: #F47D31;
 }
 
-/*
 h4 {
 	color: #F47D31;
-	background-color: #fff;
-	-webkit-box-shadow: 2px 2px 20px #888;
-	-webkit-transform: rotate(-45deg);
-	-moz-box-shadow: 2px 2px 20px #888;
-	-moz-transform: rotate(-45deg);
-	position: absolute;
-	padding: 0px 150px;
-	top: 50px;
-	left: -120px;
-	text-align:center;	
+	background-color: #fff;	
 }
-*/
 
 img {
 	width: 20vh;
@@ -177,7 +165,8 @@ footer {
 
 footer h2 {
 	font-size: 14px;
-	color: white;
+	color: #000000;
+	font-size: 12px;
 }
 
 
